--- a/MyContactList/Base.lproj/Main.storyboard
+++ b/MyContactList/Base.lproj/Main.storyboard
@@ -44,21 +44,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Di3-je-qXm">
-                                <rect key="frame" x="146.66666666666666" y="409.33333333333331" width="100" height="33.666666666666686"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="KhH-gT-jXl">
+                                <rect key="frame" x="36.666666666666657" y="232.33333333333334" width="320" height="387.33333333333326"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sort Order:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7S-Jk-Tsc">
+                                        <rect key="frame" x="117.33333333333334" y="0.0" width="85" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="agp-aD-1YF">
+                                        <rect key="frame" x="0.0" y="81" width="320" height="216"/>
+                                    </pickerView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Wdr-RR-cAr">
+                                        <rect key="frame" x="69.666666666666643" y="356.33333333333326" width="180.33333333333337" height="31"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ascending Sort:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHt-ti-eVE">
+                                                <rect key="frame" x="0.0" y="0.0" width="121.33333333333333" height="31"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u4T-zS-QhR">
+                                                <rect key="frame" x="131.33333333333331" y="0.0" width="51" height="31"/>
+                                                <connections>
+                                                    <action selector="sortDirectionChanged:" destination="dwn-X9-Bnd" eventType="valueChanged" id="S54-Kh-FEq"/>
+                                                </connections>
+                                            </switch>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="uui-xw-hfE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Di3-je-qXm" firstAttribute="centerX" secondItem="MrX-he-sfx" secondAttribute="centerX" id="9nQ-Kc-jdd"/>
-                            <constraint firstItem="Di3-je-qXm" firstAttribute="centerY" secondItem="MrX-he-sfx" secondAttribute="centerY" id="X7Y-e0-Feb"/>
+                            <constraint firstItem="KhH-gT-jXl" firstAttribute="centerY" secondItem="MrX-he-sfx" secondAttribute="centerY" id="7YY-x2-y37"/>
+                            <constraint firstItem="KhH-gT-jXl" firstAttribute="centerX" secondItem="MrX-he-sfx" secondAttribute="centerX" id="7zM-ep-qVa"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="SettingsIcon" selectedImage="SettingsIcon" id="7Tr-Ry-hjf"/>
+                    <connections>
+                        <outlet property="pckSortField" destination="agp-aD-1YF" id="7rc-0i-wPm"/>
+                        <outlet property="swAscending" destination="u4T-zS-QhR" id="NHd-zd-e04"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kch-HR-wqU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -283,7 +312,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="Gfk-Kw-Jbb">
+                            <datePicker contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="Gfk-Kw-Jbb">
                                 <rect key="frame" x="0.0" y="120.99999999999999" width="393" height="34.333333333333329"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34.329999999999998" id="g4N-Bi-dfc"/>
